--- a/categorias.html
+++ b/categorias.html
@@ -11,24 +11,28 @@
 </head>
 <body class="text-white">
   <header class="flex p-6">
+    <!-- Pesquisa e ícones à esquerda -->
     <div class="flex items-center space-x-4">
-      <i class="fas fa-search text-xl"></i>
-      <input class="bg-transparent border-b border-white focus:outline-none" placeholder="Pesquisar" type="text"/>
+        <i class="fas fa-search text-xl"></i>
+        <input class="bg-transparent border-b border-white focus:outline-none" placeholder="Pesquisar"
+            type="text" />
     </div>
+    <!-- Menu de navegação com marca centralizada -->
     <nav class="flex items-center space-x-8 mx-auto">
-      <a class="text-white" href="#">Início</a>
-      <a class="text-white" href="#">Loja</a>
-      <a class="text-white" href="#">Categorias</a>
-      <h1 class="marca">BeeVibe</h1>
-      <a class="text-white" href="#">Galeria</a>
-      <a class="text-white" href="#">Promoção</a>
-      <a class="text-white" href="#">Contato</a>
+        <a href="./index.html">Início</a>
+        <a href="./loja.html">Loja</a>
+        <a href="./categorias.html">Categorias</a>
+        <h1 class="marca">BeeVibe</h1> <!-- Centralizando o nome -->
+        <a href="./galeria.html">Galeria</a>
+        <a href="./promocao.html">Promoção</a>
+        <a href="./contato.html">Contato</a>
     </nav>
+    <!-- Ícones à direita -->
     <div class="flex space-x-4">
-      <i class="fas fa-shopping-cart text-xl"></i>
-      <i class="fas fa-user-circle text-xl"></i>
+        <i class="fas fa-shopping-cart text-xl"></i>
+        <i class="fas fa-user-circle text-xl"></i>
     </div>
-  </header>
+</header>
 
   <main class="p-6">
     <h1 class="text-4xl font-bold mb-6">Categorias</h1>
