--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
         </div>
         <!-- Menu de navegação com marca centralizada -->
         <nav class="flex items-center space-x-8 mx-auto">
-            <a class="text-white" href="./index.html">Início</a>
-            <a class="text-white" href="./loja.html">Loja</a>
-            <a class="text-white" href="./categorias.html">Categorias</a>
+            <a href="./index.html">Início</a>
+            <a href="./loja.html">Loja</a>
+            <a href="./categorias.html">Categorias</a>
             <h1 class="marca">BeeVibe</h1> <!-- Centralizando o nome -->
-            <a class="text-white" href="./galeria.html">Galeria</a>
-            <a class="text-white" href="./promocao.html">Promoção</a>
-            <a class="text-white" href="./contato.html">Contato</a>
+            <a href="./galeria.html">Galeria</a>
+            <a href="./promocao.html">Promoção</a>
+            <a href="./contato.html">Contato</a>
         </nav>
         <!-- Ícones à direita -->
         <div class="flex space-x-4">
