--- a/loja.html
+++ b/loja.html
@@ -7,61 +7,114 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Roboto:wght@400;500&display=swap" rel="stylesheet"/>
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/loja.css">
+  <script src="./js/script.js"></script>
 </head>
 <body class="text-white">
   <header class="flex p-6">
+    <!-- Pesquisa e ícones à esquerda -->
     <div class="flex items-center space-x-4">
-      <i class="fas fa-search text-xl"></i>
-      <input class="bg-transparent border-b border-white focus:outline-none" placeholder="Pesquisar" type="text"/>
+        <i class="fas fa-search text-xl"></i>
+        <input class="bg-transparent border-b border-white focus:outline-none" placeholder="Pesquisar"
+            type="text" />
     </div>
+    <!-- Menu de navegação com marca centralizada -->
     <nav class="flex items-center space-x-8 mx-auto">
-      <a class="text-white" href="#">Início</a>
-      <a class="text-white" href="#">Loja</a>
-      <a class="text-white" href="#">Categorias</a>
-      <h1 class="marca">BeeVibe</h1>
-      <a class="text-white" href="#">Galeria</a>
-      <a class="text-white" href="#">Promoção</a>
-      <a class="text-white" href="#">Contato</a>
+        <a href="./index.html">Início</a>
+        <a href="./loja.html">Loja</a>
+        <a href="./categorias.html">Categorias</a>
+        <h1 class="marca">BeeVibe</h1> <!-- Centralizando o nome -->
+        <a href="./galeria.html">Galeria</a>
+        <a href="./promocao.html">Promoção</a>
+        <a href="./contato.html">Contato</a>
     </nav>
+    <!-- Ícones à direita -->
     <div class="flex space-x-4">
-      <i class="fas fa-shopping-cart text-xl"></i>
-      <i class="fas fa-user-circle text-xl"></i>
+        <i class="fas fa-shopping-cart text-xl"></i>
+        <i class="fas fa-user-circle text-xl"></i>
     </div>
-  </header>
+</header>
 
   <!-- Banner de topo -->
-  <section class="relative w-full h-96">
-    <img src="https://via.placeholder.com/1920x500" alt="Banner Loja" class="w-full h-full object-cover">
-    <div class="absolute top-0 left-0 w-full h-full bg-black bg-opacity-50 flex justify-center items-center text-center">
-      <h1 class="text-4xl font-bold text-white">Bem-vindo à Loja BeeVibe</h1>
-      <p class="text-lg text-white mt-2">Encontre os melhores estilos para todas as ocasiões!</p>
+  <section id="carrossel">
+    <div class="slider">
+        <div class="slides">
+            <img src="./image/banner01.png" alt="Banner 1" class="active">
+        </div>
     </div>
-  </section>
+</section>
+
+
 
   <!-- Conteúdo da loja -->
   <main class="p-6">
     <h2 class="text-4xl font-bold mb-6 text-center">Produtos em Destaque</h2>
     <div class="grid grid-cols-3 gap-6">
-      <div class="bg-black p-4">
-        <img class="w-full h-56 object-cover" src="https://via.placeholder.com/300" alt="Produto 1"/>
-        <h3 class="text-lg mt-4">Produto 1</h3>
-        <p>Descrição do produto.</p>
-        <button class="bg-white text-black mt-4 px-6 py-2">Comprar</button>
+      <div class="product-card">
+        <img class="product-image" src="./image/camisa_linho.png" alt="Produto 1"/>
+        <div class="product-info">
+          <h3 class="product-title">Camisa de Linho Masculina, Casual Manga Comprida</h3>
+          <p class="product-description">A camisa de linho masculina casual garante frescor e leveza ao look, perfeita para o dia a dia essa peça de roupa pode ser usada em diversas ocasiões.</p>
+          <div class="product-footer">
+            <span class="product-price">R$ 99,99</span>
+            <button class="buy-button">Comprar</button>
+          </div>
+        </div>
       </div>
-      <div class="bg-black p-4">
-        <img class="w-full h-56 object-cover" src="https://via.placeholder.com/300" alt="Produto 2"/>
-        <h3 class="text-lg mt-4">Produto 2</h3>
-        <p>Descrição do produto.</p>
-        <button class="bg-white text-black mt-4 px-6 py-2">Comprar</button>
+      <div class="product-card">
+        <img class="product-image" src="./image/blaze_feminino.png" alt="Produto 2"/>
+        <div class="product-info">
+          <h3 class="product-title">Blazer Feminino Alfaiataria Acinturado Modern</h3>
+          <p class="product-description">Desenhado para valorizar a silhueta feminina, ele é a escolha perfeita para adicionar um toque refinado ao seu estilo.</p>
+          <div class="product-footer">
+            <span class="product-price">R$ 129,99</span>
+            <button class="buy-button">Comprar</button>
+          </div>
+        </div>
       </div>
-      <div class="bg-black p-4">
-        <img class="w-full h-56 object-cover" src="https://via.placeholder.com/300" alt="Produto 3"/>
-        <h3 class="text-lg mt-4">Produto 3</h3>
-        <p>Descrição do produto.</p>
-        <button class="bg-white text-black mt-4 px-6 py-2">Comprar</button>
+      <div class="product-card">
+        <img class="product-image" src="./image/calca_alfaiate.jpg" alt="Produto 3"/>
+        <div class="product-info">
+          <h3 class="product-title">Calça Alfaiataria Algodão Preta</h3>
+          <p class="product-description">Uma peça prática e elegante, combinando conforto e sofisticação da alfaiataria.</p>
+          <div class="product-footer">
+            <span class="product-price">R$ 159,99</span>
+            <button class="buy-button">Comprar</button>
+          </div>
+        </div>
       </div>
     </div>
+    <div class="container mx-auto px-4 py-8">
+      <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+       <!-- VESTIDOS -->
+       <div class="relative zoom-container">
+        <img alt="Woman sitting on a bench wearing a blue dress with a yellow scarf" class="w-full h-full object-cover" height="800" src="./image/formal_banner.png" width="600"/>
+        <div class="absolute inset-0 flex items-center justify-center">
+         <span class="text-white text-2xl font-bold highlight-text">
+          FORMAL
+         </span>
+        </div>
+       </div>
+       <!-- SEDA -->
+       <div class="relative zoom-container">
+        <img alt="Woman standing near the sea wearing a colorful silk dress" class="w-full h-full object-cover" height="800" src="./image/casual_banner.jpg" width="600"/>
+        <div class="absolute inset-0 flex items-center justify-center">
+         <span class="text-white text-2xl font-bold highlight-text">
+          CASUAL
+         </span>
+        </div>
+       </div>
+       <!-- ACESSÓRIOS -->
+       <div class="relative zoom-container">
+        <img alt="Woman standing near the sea wearing a white t-shirt with 'I love Capri' text and blue shorts" class="w-full h-full object-cover" height="800" src="./image/semi_banner.jpg" width="600"/>
+        <div class="absolute inset-0 flex items-center justify-center">
+         <span class="text-white text-2xl font-bold highlight-text">
+          SEMI
+         </span>
+        </div>
+       </div>
+      </div>
+     </div>
   </main>
 </body>
 </html>
