--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <h1 class="text-8xl font-bold header"><span class="marcado">Estilo</span> para cada ocasião</h1>
             <p class="text-lg subtitulo">Tudo o que você procura para sua aparência elegante está aqui!</p>
             <div class="flex space-x-4">
-                <button class="bg-white text-black px-6 py-2 flex items-center">
+                <button class="compre text-black px-6 py-2 flex items-center">
                     Compre agora <i class="fas fa-arrow-right ml-2"></i>
                 </button>
                 <button class="veja border px-6 py-2">Veja mais</button>
@@ -52,33 +52,41 @@
         </div>
         <div class="relative-flex-column">
             <div class="flex flex-col items-center">
-                <img alt="Formal style" class="w-48 h-48 object-cover"
+                <img alt="Formal style" class="categoria_imagem w-48 h-48 object-cover"
                     src="https://storage.googleapis.com/a1aa/image/WjaZGLgqNRKhFFBVfe259luJn0kbrwr8XMRYzNfu5aSuPmknA.jpg" />
-                <div class="categorias flex items-center justify-between w-full p-4">
+                    
+                    <div class="categorias flex items-center justify-between w-full p-4">
                     <span>Formal</span>
+                    <a href="./categorias.html">
                     <div class="bg-white p-2">
                         <i class="fas fa-chevron-right text-black"></i>
                     </div>
+                </a>
                 </div>
+            
             </div>
             <div class="flex flex-col items-center">
-                <img alt="Casual style" class="w-48 h-48 object-cover"
+                <img alt="Casual style" class="categoria_imagem w-48 h-48 object-cover"
                     src="https://storage.googleapis.com/a1aa/image/9vo7S3C5xgLaEhFV6GDfcXCNJHTL7v30H3Ub5WH355UeHTyTA.jpg" />
                 <div class="categorias flex items-center justify-between w-full p-4">
                     <span>Casual</span>
-                    <div class="bg-white p-2">
-                        <i class="fas fa-chevron-right text-black"></i>
-                    </div>
+                    <a href="./categorias.html">
+                        <div class="bg-white p-2">
+                            <i class="fas fa-chevron-right text-black"></i>
+                        </div>
+                    </a>
                 </div>
             </div>
             <div class="flex flex-col items-center">
-                <img alt="Semi-formal style" class="w-48 h-48 object-cover"
+                <img alt="Semi-formal style" class="categoria_imagem w-48 h-48 object-cover"
                     src="https://storage.googleapis.com/a1aa/image/CcYIOze5USTQH6a5N1bT7C8KY7xexNJnhpe7Lwl0a8fpfYSeE.jpg" />
                 <div class="categorias flex items-center justify-between w-full p-4">
                     <span>Semi</span>
-                    <div class="bg-white p-2">
-                        <i class="fas fa-chevron-right text-black"></i>
-                    </div>
+                    <a href="./categorias.html">
+                        <div class="bg-white p-2">
+                            <i class="fas fa-chevron-right text-black"></i>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
