--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a href="./index.html">Início</a>
             <a href="./loja.html">Loja</a>
             <a href="./categorias.html">Categorias</a>
-            <h1 class="marca">BeeVibe</h1> <!-- Centralizando o nome -->
+            <a class="marca" href="./index.html">BeeVibe</a> <!-- Centralizando o nome -->
             <a href="./galeria.html">Galeria</a>
             <a href="./promocao.html">Promoção</a>
             <a href="./contato.html">Contato</a>
