--- a/loja.html
+++ b/loja.html
@@ -23,7 +23,7 @@
         <a href="./index.html">Início</a>
         <a href="./loja.html">Loja</a>
         <a href="./categorias.html">Categorias</a>
-        <h1 class="marca">BeeVibe</h1> <!-- Centralizando o nome -->
+        <a class="marca" href="./index.html">BeeVibe</a> <!-- Centralizando o nome -->
         <a href="./galeria.html">Galeria</a>
         <a href="./promocao.html">Promoção</a>
         <a href="./contato.html">Contato</a>
@@ -84,37 +84,6 @@
         </div>
       </div>
     </div>
-    <div class="container mx-auto px-4 py-8">
-      <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
-       <!-- VESTIDOS -->
-       <div class="relative zoom-container">
-        <img alt="Woman sitting on a bench wearing a blue dress with a yellow scarf" class="w-full h-full object-cover" height="800" src="./image/formal_banner.png" width="600"/>
-        <div class="absolute inset-0 flex items-center justify-center">
-         <span class="text-white text-2xl font-bold highlight-text">
-          FORMAL
-         </span>
-        </div>
-       </div>
-       <!-- SEDA -->
-       <div class="relative zoom-container">
-        <img alt="Woman standing near the sea wearing a colorful silk dress" class="w-full h-full object-cover" height="800" src="./image/casual_banner.jpg" width="600"/>
-        <div class="absolute inset-0 flex items-center justify-center">
-         <span class="text-white text-2xl font-bold highlight-text">
-          CASUAL
-         </span>
-        </div>
-       </div>
-       <!-- ACESSÓRIOS -->
-       <div class="relative zoom-container">
-        <img alt="Woman standing near the sea wearing a white t-shirt with 'I love Capri' text and blue shorts" class="w-full h-full object-cover" height="800" src="./image/semi_banner.jpg" width="600"/>
-        <div class="absolute inset-0 flex items-center justify-center">
-         <span class="text-white text-2xl font-bold highlight-text">
-          SEMI
-         </span>
-        </div>
-       </div>
-      </div>
-     </div>
   </main>
 </body>
 </html>
