--- a/galeria.html
+++ b/galeria.html
@@ -22,7 +22,7 @@
         <a href="./index.html">Início</a>
         <a href="./loja.html">Loja</a>
         <a href="./categorias.html">Categorias</a>
-        <h1 class="marca">BeeVibe</h1>
+        <a class="marca" href="./index.html">BeeVibe</a>
         <a href="./galeria.html">Galeria</a>
         <a href="./promocao.html">Promoção</a>
         <a href="./contato.html">Contato</a>
@@ -33,8 +33,15 @@
     </div>
   </header>
 
+  <section id="carrossel">
+    <div class="slider">
+        <div class="slides">
+            <img src="./galeria/banner_galeria.png" alt="Banner 1" class="active">
+        </div>
+    </div>
+</section>
+
   <main class="p-6">
-    <h1 class="text-4xl font-bold mb-6">Galeria de Estilos</h1>
     <div class="container mx-auto p-4">
       <div class="grid grid-cols-4 gap-2">
         <!-- Imagens para a Galeria com links para Lightbox -->
