--- a/promocao.html
+++ b/promocao.html
@@ -7,22 +7,21 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Roboto:wght@400;500&display=swap" rel="stylesheet"/>
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/promocao.css">
 </head>
 <body class="text-white">
   <header class="flex p-6">
     <!-- Pesquisa e ícones à esquerda -->
     <div class="flex items-center space-x-4">
         <i class="fas fa-search text-xl"></i>
-        <input class="bg-transparent border-b border-white focus:outline-none" placeholder="Pesquisar"
-            type="text" />
+        <input class="bg-transparent border-b border-white focus:outline-none" placeholder="Pesquisar" type="text" />
     </div>
     <!-- Menu de navegação com marca centralizada -->
     <nav class="flex items-center space-x-8 mx-auto">
         <a href="./index.html">Início</a>
         <a href="./loja.html">Loja</a>
         <a href="./categorias.html">Categorias</a>
-        <h1 class="marca">BeeVibe</h1> <!-- Centralizando o nome -->
+        <a class="marca" href="./index.html">BeeVibe</a>
         <a href="./galeria.html">Galeria</a>
         <a href="./promocao.html">Promoção</a>
         <a href="./contato.html">Contato</a>
@@ -32,27 +31,82 @@
         <i class="fas fa-shopping-cart text-xl"></i>
         <i class="fas fa-user-circle text-xl"></i>
     </div>
-</header>
+  </header>
 
   <main class="p-6">
-    <h1 class="text-4xl font-bold mb-6">Promoções Especiais</h1>
+    <section class="relative">
+      <div id="carousel" class="carousel-container flex">
+        <div class="promo-slide w-full">
+          <img src="./galeria/banner_promo2.png" class="promo-img" alt="Promoção 1"/>
+          <div class="p-4">
+            <h3 class="text-lg font-semibold text-white">Promoção 1</h3>
+            <button class="bg-white text-black mt-4 px-6 py-2">Aproveitar</button>
+          </div>
+        </div>
+        <div class="promo-slide w-full">
+          <img src="./galeria/banner_promo.png" class="promo-img" alt="Promoção 2"/>
+          <div class="p-4">
+            <h3 class="text-lg font-semibold text-white">Promoção 2</h3>
+            <button class="bg-white text-black mt-4 px-6 py-2">Aproveitar</button>
+          </div>
+        </div>
+        <div class="promo-slide w-full">
+          <img src="./galeria/banner_pro.png" class="promo-img" alt="Promoção 3"/>
+          <div class="p-4">
+            <h3 class="text-lg font-semibold text-white">Promoção 3</h3>
+            <button class="bg-white text-black mt-4 px-6 py-2">Aproveitar</button>
+          </div>
+        </div>
+      </div>
+    
+      <!-- Botões de Navegação -->
+      <div class="absolute top-1/2 transform -translate-y-1/2 w-full flex justify-between px-4">
+        <button id="prev" class="bg-black text-white p-2 rounded-full">
+          <i class="fas fa-chevron-left"></i>
+        </button>
+        <button id="next" class="bg-black text-white p-2 rounded-full">
+          <i class="fas fa-chevron-right"></i>
+        </button>
+      </div>
+    </section>
+  
+    <h2 class="text-4xl font-bold mb-6 text-center">Produtos em Destaque</h2>
     <div class="grid grid-cols-3 gap-6">
-      <div class="bg-black p-4">
-        <img class="w-full h-56 object-cover" src="https://via.placeholder.com/300" alt="Promoção 1"/>
-        <h3 class="text-lg mt-4">Promoção 1</h3>
-        <button class="bg-white text-black mt-4 px-6 py-2">Aproveitar</button>
+      <div class="product-card">
+        <img class="product-image" src="./galeria/promocao01.png" alt="Produto 1"/>
+        <div class="product-info">
+          <h3 class="product-title">Camisa de Linho Masculina, Casual Manga Comprida</h3>
+          <p class="product-description">A camisa de linho masculina casual garante frescor e leveza ao look, perfeita para o dia a dia essa peça de roupa pode ser usada em diversas ocasiões.</p>
+          <div class="product-footer">
+            <span class="product-price"> ̶R̶$̶ ̶2̶5̶0̶,̶0̶0̶  R$ 100,00</span>
+            <button class="buy-button">Comprar</button>
+          </div>
+        </div>
       </div>
-      <div class="bg-black p-4">
-        <img class="w-full h-56 object-cover" src="https://via.placeholder.com/300" alt="Promoção 2"/>
-        <h3 class="text-lg mt-4">Promoção 2</h3>
-        <button class="bg-white text-black mt-4 px-6 py-2">Aproveitar</button>
+      <div class="product-card">
+        <img class="product-image" src="./galeria/promocao02.png" alt="Produto 2"/>
+        <div class="product-info">
+          <h3 class="product-title">Blazer Feminino Alfaiataria Acinturado Modern</h3>
+          <p class="product-description">Desenhado para valorizar a silhueta feminina, ele é a escolha perfeita para adicionar um toque refinado ao seu estilo.</p>
+          <div class="product-footer">
+            <span class="product-price"> ̶R̶$̶ ̶2̶0̶0̶,̶0̶0̶  R$ 100,00 </span>
+            <button class="buy-button">Comprar</button>
+          </div>
+        </div>
       </div>
-      <div class="bg-black p-4">
-        <img class="w-full h-56 object-cover" src="https://via.placeholder.com/300" alt="Promoção 3"/>
-        <h3 class="text-lg mt-4">Promoção 3</h3>
-        <button class="bg-white text-black mt-4 px-6 py-2">Aproveitar</button>
+      <div class="product-card">
+        <img class="product-image" src="./image/formal02.png" alt="Produto 3"/>
+        <div class="product-info">
+          <h3 class="product-title">Calça Alfaiataria Algodão Preta</h3>
+          <p class="product-description">Uma peça prática e elegante, combinando conforto e sofisticação da alfaiataria.</p>
+          <div class="product-footer">
+            <span class="product-price"> ̶R̶$̶ ̶3̶4̶9̶,̶0̶0̶   R$ 297,90</span>
+            <button class="buy-button">Comprar</button>
+          </div>
+        </div>
       </div>
     </div>
   </main>
+  <script src="./js//promocao.js" defer></script>
 </body>
 </html>
