--- a/promocao.html
+++ b/promocao.html
@@ -27,9 +27,11 @@
         <a href="./contato.html">Contato</a>
     </nav>
     <!-- Ícones à direita -->
-    <div class="flex space-x-4">
-        <i class="fas fa-shopping-cart text-xl"></i>
-        <i class="fas fa-user-circle text-xl"></i>
+    <div id="cart-icon" class="relative flex space-x-4">
+      <a href="#" class="fas fa-shopping-cart text-xl" id="cart-toggle">
+        <span id="cart-counter">0</span>
+      </a>
+      <a href="" class="fas fa-user-circle text-xl"></a>
     </div>
   </header>
 
